@@ -1,20 +1,15 @@
-Re-submission:
+Submission:
 
-"Please write something like:
-
-Provides a framework to evaluate power using functions provided in 
-other packages or written by the user."
-
-Fixed: Changed DESCRIPTION to clarify functionality.
-
+Please excuse submitting two updates so close together. This update fixes a significant bug for users where options("cores") is not already set.
 
 ## Test environments
 * local Windows install, R 3.3.3
 * local OS X install, R 3.2 
 * ubuntu 14.04 (on travis-ci), R 3.4.1 
-* win-builder (devel and release)
+* win-builder (devel, release, old-release)
 
 ## R CMD check results
 There were no ERRORs or WARNINGs.
 
-There are no NOTEs.
+NOTE 
+Days since last update: 5
